# iowa_sales_forecast

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  SPECS.md  _api_reference.html  app.py  genindex.html  index.html  installation.html  iowa_forecast.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  searchindex.js
.doctrees/: index.doctree  installation.doctree  iowa_forecast.doctree
.doctrees/api_reference/: index.doctree
.doctrees/api_reference/iowa_forecast/: index.doctree  load_data.doctree  ml_train.doctree  models_configs.doctree  utils.doctree
.github/workflows/: deploy-docs.yml  test-code.yml
_modules/: index.html
_modules/iowa_forecast/: load_data.html  ml_eval.html  ml_train.html  models_configs.html  plots.html  utils.html
_sources/: installation.rst.txt  iowa_forecast.rst.txt
_sources/api_reference/: index.rst.txt  load_data.rst.txt  ml_train.rst.txt  utils.rst.txt
_sources/api_reference/iowa_forecast/: utils.rst.txt
api_reference/: index.html  load_data.html  plots.html  utils.html
api_reference/iowa_forecast/: load_data.html  ml_eval.html  ml_train.html  plots.html  utils.html
docs/: Makefile  conf.py  index.rst  installation.rst  modules.rst
docs/api_reference/iowa_forecast/: load_data.rst  ml_eval.rst
docs/docs/doctrees/: _api_reference.doctree  api_reference.doctree  index.doctree  installation.doctree  iowa_forecast.doctree  modules.doctree
docs/docs/doctrees/api_reference/: index.doctree  load_data.doctree  utils.doctree
docs/docs/doctrees/api_reference/iowa_forecast/: index.doctree  load_data.doctree  ml_eval.doctree  ml_train.doctree  models_configs.doctree  plots.doctree  utils.doctree
docs/docs/doctrees/docs/html/_static/scripts/: furo.js.LICENSE.doctree
docs/docs/html/: .buildinfo  _api_reference.html  api_reference.html  genindex.html  index.html  installation.html  iowa_forecast.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/docs/html/.doctrees/: _api_reference.doctree  index.doctree  installation.doctree  modules.doctree
docs/docs/html/.doctrees/api_reference/: index.doctree
docs/docs/html/.doctrees/api_reference/iowa_forecast/: index.doctree  load_data.doctree  ml_eval.doctree  ml_train.doctree  plots.doctree  utils.doctree
docs/docs/html/.doctrees/docs/html/_static/scripts/: furo.js.LICENSE.doctree
docs/docs/html/_modules/: index.html
docs/docs/html/_modules/iowa_forecast/: load_data.html  ml_eval.html  ml_train.html  plots.html  utils.html
docs/docs/html/_sources/: api_reference.rst.txt  installation.rst.txt
docs/docs/html/_sources/api_reference/: index.rst.txt
docs/docs/html/_sources/api_reference/iowa_forecast/: index.rst.txt  ml_train.rst.txt  models_configs.rst.txt  plots.rst.txt
docs/docs/html/_static/: custom.css
docs/docs/html/api_reference/: index.html
docs/docs/html/api_reference/iowa_forecast/: index.html  load_data.html  ml_eval.html  ml_train.html  models_configs.html  plots.html  utils.html
docs/docs/html/docs/html/_static/scripts/: furo.js.LICENSE.html
docs/doctrees/api_reference/: ml_eval.doctree  ml_train.doctree  plots.doctree
docs/doctrees/api_reference/iowa_forecast/: index.doctree  plots.doctree
docs/html/: genindex.html  iowa_forecast.html  py-modindex.html
docs/html/.doctrees/: _api_reference.doctree  installation.doctree  iowa_forecast.doctree  modules.doctree
docs/html/.doctrees/api_reference/: index.doctree
docs/html/.doctrees/api_reference/iowa_forecast/: load_data.doctree  ml_eval.doctree  ml_train.doctree  utils.doctree
docs/html/.doctrees/docs/html/_static/scripts/: furo.js.LICENSE.doctree
docs/html/_modules/iowa_forecast/: ml_eval.html
docs/html/_sources/api_reference/: ml_eval.rst.txt  plots.rst.txt
docs/html/_sources/api_reference/iowa_forecast/: index.rst.txt
docs/html/_static/scripts/: furo.js.LICENSE.html
docs/html/api_reference/: ml_eval.html  ml_train.html
docs/html/api_reference/iowa_forecast/: index.html  plots.html  utils.html
iowa_forecast/: __init__.py  load_data.py  ml_eval.py  ml_train.py  models_configs.py  plots.py  utils.py
notebooks/: Auto ML.ipynb  GCP IOWA-Copy1.ipynb  LSTM.ipynb  POC V2.ipynb  POC.ipynb  SKLEARN MODEL.ipynb  Test Code.ipynb  Untitled.ipynb  Walkthrough.ipynb  sample_train_data.csv
pipelines/: ml_forecast.py  train_model_and_forecast_sales.py
scripts/: pylint_score.py
tests/: test_load_data.py  test_models_configs.py  test_utils.py
