[tool.poetry]
name = 'bunge'
version = '0.0.2'
description = 'Iowa liquor sales forecasting model.'
license = 'MIT.'
authors = ['Ingwersen_erik <erik.ingwersen@br.ey.com>']
readme = 'README.md'
repository = 'https://github.com/erik-ingwersen-ey/iowa_liquor_sales_forecast'
homepage = 'https://github.com/erik-ingwersen-ey/iowa_liquor_sales_forecast'
documentation = 'https://erik-ingwersen-ey.github.io/iowa_liquor_sales_forecast'
keywords = ['forecast', 'liquor', 'sales', 'iowa']
packages = [
    { include = 'iowa_forecast' },
]
include = [
    '*.md',
    '*.rst',
    '*.cfg',
    '*.txt',
    '.flake8',
    '.pylintrc',
    'tox.ini',
    'Makefile',
    'CHANGES',
    'LICENSE',
    'MANIFEST.in',
    'requirements.txt',
    'tests/*',
]


[tool.poetry.dependencies]
python = '>=3.8,<3.11'

db-dtypes = "^1.2.0"
furo = "^2024.8.6"
google-cloud-bigquery = "^3.25.0"
google-cloud-bigquery-storage = "^2.25.0"
google-cloud-iam = "^2.15.2"
google-cloud-logging = "^3.11.1"
matplotlib = "3.6.0"
myst-parser = "3.0.1"
numpy = "1.24.4"
numpydoc = "^1.7.0"
pandas = "2.0.3"
plotly = "^5.23.0"
pylint = "2.15.10"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
python-dateutil = "^2.9.0.post0"
rich = "^13.7.1"
scipy = "1.10.1"
seaborn = "^0.13.2"
sphinx = "7.1.2"
sphinx-click = "^6.0.0"
sphinx-inline-tabs = "^2023.4.21"
sphinx-pyreverse = "^0.0.18"

[tool.poetry.scripts]
poetry = 'poetry.console:run'

#[tool.poetry.extras]

[build-system]
# Minimum requirements for the build system to execute.
# See https://github.com/scipy/scipy/pull/12940 for the AIX issue.
build-backend = 'poetry.core.masonry.api'
requires = [
    'poetry-core>=1.0.0',
    'wheel',
    'setuptools'
]


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
skip_glob = 'docs/conf.py'


[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
  | scripts
  | shell_scripts
)/
'''



[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = 'iowa_forecast'

# The following allowlist is used to allow for incremental adoption
# of Mypy. Modules should be removed from this allowlist as and when
# their respective type errors have been addressed. No new modules
# should be added to this allowlist.
# see https://github.com/python-poetry/poetry/pull/4510.

[[tool.mypy.overrides]]
module = [
    'poetry.config.file_config_source',
    'poetry.console.*',
    'poetry.factory.*',
    'poetry.inspection.*',
    'poetry.installation.*',
    'poetry.layouts.*',
    'poetry.mixology.*',
    'poetry.packages.locker',
    'poetry.repositories.installed_repository',
    'poetry.utils.*'
]
ignore_errors = true


[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if TYPE_CHECKING:'
]
